--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -66,7 +66,7 @@
   position: fixed;
   pointer-events: none;
   z-index: 1;
-  top: @ui-padding-pane;
+  top: 32px;
   left: 0;
   height: @ui-tab-height;
   bottom: 0;
@@ -86,4 +86,5 @@
   opacity: 1;
   transform: scaleY(1);
   transition: opacity .16s, transform .32s cubic-bezier(0,.6,.2,1);
+  top: 31px;
 }
